# Aether

./: .gitignore  BUILD_PROMPTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: aether.rb
aether-vscode/: .vscodeignore  CHANGELOG.md  README.md  aether-language-0.2.0.vsix  language-configuration.json  package-lock.json  package.json  snippets.json
aether-vscode/src/: extension.ts
benchmarks/: class_ops.ae  class_ops.py  fib.ae  fib.py  list_ops.ae  list_ops.py  loop.ae  loop.py  parallel.ae  run_benchmarks.sh  string.ae  string.py
examples/: basics.ae  classes.ae  concurrency_demo.ae  control_flow.ae  crash_test.ae  data_analysis.ae  debug_demo.ae  error_handling.ae  full_stack.ae  genetic_evolution.ae  hello.ae  http_client.ae  http_server.ae  math_demo.ae  memory_demo.ae  pattern_matching.ae  python_advanced.ae  python_bridge.ae  python_numpy.ae  stdlib_demo.ae  stream_demo.ae  syntax_test.ae  tcp_echo.ae  ttl_demo.ae  viz_demo.ae
examples/apps/: data_analyzer.ae  (+2 more)
npm/: package.json
packaging/: build-deb.sh
snap/: snapcraft.yaml
src/: lib.rs  main.rs
tests/: closure_tests.rs  comprehensive_tests.rs  concurrency_tests.rs  control_flow_tests.rs  error_tests.rs  genetic_tests.rs  interpreter_tests.rs  lexer_tests.rs  list_tests.rs  map_set_tests.rs  oop_advanced_tests.rs  oop_tests.rs  operator_tests.rs  parallel_tests.rs  parser_tests.rs  stdlib_tests.rs  string_tests.rs
website/: docs.html  index.html  install.html  playground.html  style.css
(+105 files in other folders)
