[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-codegen = "0.105"
cranelift-frontend = "0.105"
cranelift-module = "0.105"
cranelift-jit = "0.105"
cranelift-native = "0.105"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
lsp-types = "0.95"
lsp-server = "0.7"

[dev-dependencies]
# pyo3 = { version = "0.21", features = ["auto-initialize"] }
