[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-codegen = "0.105"
cranelift-frontend = "0.105"
cranelift-module = "0.105"
cranelift-jit = "0.105"
cranelift-native = "0.105"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
lsp-types = "0.95"
lsp-server = "0.7"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
regex = "1"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
ureq = "2"
glob = "0.3"
chrono = "0.4"
notify = "6"
tiny_http = "0.12"
tungstenite = "0.21"

[dev-dependencies]
